--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -13,14 +13,14 @@
     @content;
   }
 }
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(30deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
+// @keyframes rotation {
+//   0% {
+//     transform: rotate(0deg);
+//   }
+//   50% {
+//     transform: rotate(30deg);
+//   }
+//   100% {
+//     transform: rotate(0deg);
+//   }
+// }
